--- a/games/test.html
+++ b/games/test.html
@@ -20,4 +20,4 @@
 <embed src="/dump/text.html">
 </div>
 
-<b><a onclick="openGame();" style="text-decoration: none; position: absolute; top: 25px; left: 25px; color: blueviolet;">Open Game</a>
+<b><a onclick="openGame();" style="cursor: pointer; position: absolute; top: 25px; right: 25px; font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Open Game</a>
