--- a/games/curveball.html
+++ b/games/curveball.html
@@ -18,3 +18,5 @@
 <div class="text">
 <embed src="/dump/text.html">
 </div>
+
+<b><a onclick="openGame();" style="cursor: pointer; position: absolute; top: 15px; right: 25px; font-family: 'Poppins', sans-serif; font-size: 24px; color: #fff; text-decoration: none;" target="_parent">Cloak Link</a>
