--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <meta name="keywords" content="spew45, ubg, minecraft unblocked, retro bowl unblocked, retro bowl, money mart, money mart unblocked,">
 <meta name="news_keywords" content="UBG, Unblocked Games, Games, Eazy Games, 3D Games, Games for math, school games, spew45.github.io,">
 <meta charset="UTF-8">
+<script src="/js/main.js"></script>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+</style>
 
 
 <title>Homepage</title>
