--- a/index.html
+++ b/index.html
@@ -24,4 +24,12 @@
 <embed src="/dump/text.html">
 </div>
 
-<b><a onclick="openGame();" style="cursor: pointer; position: absolute; top: 15px; right: 25px; font-family: 'Poppins', sans-serif; font-size: 24px; color: #fff; text-decoration: none;" target="_parent">Cloak Link</a>
+<div class="dropdown">
+  <button class="dropbtn" style="position: absolute; top: 15px; right: 25px; font-family: 'Poppins', sans-serif;">Dropdown
+  	<i class="fa fa-caret-down"></i></button>
+  <div class="dropdown-content">
+    <a href="#">Cloak Link</a>
+    <a href="#">Fullscreen</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
