--- a/games/test.html
+++ b/games/test.html
@@ -21,7 +21,7 @@
 <div class="dropdown" style="float:right;">
   <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
   <div class="dropdown-content">
-    <a href="#" style="font-family: 'Poppins', sans-serif;">Fullscreen</a>
+    <a onclick="openFullscreen();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Fullscreen</a>
     <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
     <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
   </div>
