--- a/games/test.html
+++ b/games/test.html
@@ -30,6 +30,19 @@
 
 <p align="center"><iframe src="https://html5.gamedistribution.com/036ea308d90d43a1aed40716ae683c94/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/idle-mining-empire.html" id="iframe"></iframe></p>
 
+<script>
+var elem = document.getElementById("iframe");
+function openFullscreen() {
+  if (elem.requestFullscreen) {
+    elem.requestFullscreen();
+  } else if (elem.webkitRequestFullscreen) { /* Safari */
+    elem.webkitRequestFullscreen();
+  } else if (elem.msRequestFullscreen) { /* IE11 */
+    elem.msRequestFullscreen();
+  }
+}
+</script>
+
 <div class="text">
 <embed src="/dump/text.html">
 </div>
