--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <div class="border"></div>
 
+<script src="/js/test.js"></script>
+
 <div class="text">
 <embed src="/dump/text.html">
 </div>
-
-<b><a onclick="openGame();" style="cursor: pointer; position: absolute; top: 15px; right: 25px; font-family: 'Poppins', sans-serif; font-size: 24px; color: #fff; text-decoration: none;" target="_parent">Cloak Link</a>
