--- a/dump/text.html
+++ b/dump/text.html
@@ -16,6 +16,7 @@
 <b><a href="/games/cookie-clicker.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Cookie Clicker</a><br>
 <b><a href="/games/craft-mine.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Craft Mine</a><br>
 <b><a href="/games/curveball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Curveball</a><br>
+<b><a href="/games/donkey-kong.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Donkey Kong</a><br>
 <b><a href="/games/drift-boss.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Drift Boss</a><br>
 <b><a href="/games/drive-mad.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Drive Mad</a><br>
 <b><a href="/games/eggy-car.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Eggy Car</a><br>
