--- a/games/shell-shockers.html
+++ b/games/shell-shockers.html
@@ -12,12 +12,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 </style>
 
-
 <title>Classes</title>
 
 <body style="background-color: #001b2e;"></body>
 
 <div class="border"></div>
+
+<div class="dropdown" style="float:right;">
+  <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
+  <div class="dropdown-content">
+    <a onclick="openFullscreen();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;">Fullscreen</a>
+    <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
+    <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
+  </div>
+</div>
 
 <p align="center"><iframe src="https://geometry.monster/" id="iframe"></iframe></p>
 
@@ -26,4 +34,3 @@
 <div class="text">
 <embed src="/dump/text.html">
 </div>
-
