--- a/dump/text.html
+++ b/dump/text.html
@@ -54,5 +54,6 @@
 <b><a href="/games/tanuki-sunset.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tanuki Sunset</a><br>
 <b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br>
 <b><a href="/games/time-shooter-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Time Shooter: 3</a><br>
+<b><a href="/games/uno.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Uno Online</a><br>
 
 </div>
