--- a/games/uno.html
+++ b/games/uno.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<p align="center"><iframe src="https://showcase.codethislab.com/games/multiplayer/four_colors/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://html5.gamedistribution.com/f2520bae00624e93a4f4614732fa259e/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/soccer-skills-2021.html" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
 
