--- a/games/sort-the-court.html
+++ b/games/sort-the-court.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<p align="center"><iframe src="https://spew45.github.io/Stuff/projects/sort-the-court/index.html" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/Stuff/projects/sort-the-court/index.html" scrolling="no" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
 
