--- a/dump/text.html
+++ b/dump/text.html
@@ -48,6 +48,7 @@
 <b><a href="/games/snow-rider-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br>
 <b><a href="/games/soccer-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Random</a><br>
 <b><a href="/games/soccer-skills.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Skills</a><br>
+<b><a href="/games/sort-the-court.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Sort The Court</a><br>
 <b><a href="/games/spotify.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Spotify</a><br>
 <b><a href="/games/stick-merge.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stick Merge</a><br>
 <b><a href="/games/stickman-hook.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stickman Hook</a><br>
