--- a/dump/text.html
+++ b/dump/text.html
@@ -27,6 +27,7 @@ ul {
         <li><b><a href="/games/basket-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Basket Random</a><br></li>
         <li><b><a href="/games/cat-trap.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Cat Trap</a><br></li>
         <li><b><a href="/games/color-tunnel.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Color Tunnel</a><br></li>
+        <li><b><a href="/games/contra-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Contra 3</a><br></li>
         <li><b><a href="/games/cookie-clicker.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Cookie Clicker</a><br></li>
         <li><b><a href="/games/craft-mine.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Craft Mine</a><br></li>
         <li><b><a href="/games/curveball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Curveball</a><br></li>
@@ -75,6 +76,7 @@ ul {
         <li><b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br></li>
         <li><b><a href="/games/time-shooter-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Time Shooter: 3</a><br></li>
         <li><b><a href="/games/uno.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Uno Online</a><br></li>
+        <li><b><a href="/games/uv.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Ultraviolet</a><br></li>
     </ul>
 </div>
 
