--- a/test-index.html
+++ b/test-index.html
@@ -35,5 +35,7 @@
 <p align="center"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;"><a href="/games/fortnite.html">
 <img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;"><a href="/games/slope.html">
 <img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;"><a href="/games/gun-mayhem-2.html">
+<img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;"><a href="/games/gun-mayhem-2.html">
+<img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;"><a href="/games/gun-mayhem-2.html">
 </p>
 </div>
