--- a/games/btd4.html
+++ b/games/btd4.html
@@ -7,12 +7,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 <script src="/js/main.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 </style>
-
 
 <title>Classes</title>
 
@@ -21,19 +19,18 @@
 <div class="border"></div>
 
 <div class="dropdown" style="float:right;">
-    <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
-    <div class="dropdown-content">
-      <a onclick="openFullscreen();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;">Fullscreen</a>
-      <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
-      <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
-    </div>
+  <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
+  <div class="dropdown-content">
+    <a onclick="openFullscreen();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;">Fullscreen</a>
+    <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
+    <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
   </div>
+</div>
 
-<p align="center"><embed src="/swf/btd4.swf" style="width: 900px; height: 600px; border: 0px; border-radius: 0px; margin-top: 20px;"id="iframe"></embed></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/btd4/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
 
 <div class="text">
 <embed src="/dump/text.html">
 </div>
-
