--- a/dump/text.html
+++ b/dump/text.html
@@ -79,6 +79,7 @@ ul {
         <li><b><a href="/games/time-shooter-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Time Shooter: 3</a><br></li>
         <li><b><a href="/games/uno.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Uno Online</a><br></li>
         <li><b><a href="/games/uv.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Ultraviolet</a><br></li>
+        <li><b><a href="/games/wheelie-cross.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Wheelie Cross</a><br></li>
     </ul>
 </div>
 
