--- a/dump/text.html
+++ b/dump/text.html
@@ -41,6 +41,7 @@ ul {
         <li><b><a href="/games/geometry-dash.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Geometry Dash</a><br></li>
         <li><b><a href="/games/getaway-shootout.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Getaway Shootout</a><br></li>
         <li><b><a href="/games/google-baseball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Google Baseball</a><br></li>
+        <li><b><a href="/games/grind-craft.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Grindcraft</a><br></li>
         <li><b><a href="/games/gun-mayhem-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Gun Mayhem 2</a><br></li>
         <li><b><a href="/games/harry-potter-sorcerers-stone.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Harry Potter: 1 (GBA)</a><br></li>
         <li><b><a href="/games/harry-potter-chamber-of-secrets.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Harry Potter: 2 (GBA)</a><br></li>
