--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/style.css">
 <meta name="description" content="The website spew45.github.io is a clean website with 50+ popular games for all your math education needs including Minecraft, Cookie Clicker, and many more!">
-<meta name="keywords" content="spew45, ubg, minecraft unblocked, retro bowl unblocked, retro bowl, money mart, money mart unblocked,">
-<meta name="news_keywords" content="UBG, Unblocked Games, Games, Eazy Games, 3D Games, Games for math, school games, spew45.github.io,">
+<meta name="keywords" content="stick merge, spotify, ultraviolet, gba, nes emulator, nes, moto x3m, moto x3m winter, monkey mart, harry potter gba, ubg, minecraft unblocked, retro bowl unblocked, retro bowl, money mart, money mart unblocked,">
+<meta name="news_keywords" content="UBG, Unblocked Games, Games, Eazy Games, 3D Games, Games for math, school games, Minecraft Unblocked, Eaglercraft, cookie clicker, fortnite, gba emulator,">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-site-verification" content="u-mamOZCtU0gD0BmFdL5s4qVEQc_-1DYn-Ye3BbBws0" />
