--- a/test-index.html
+++ b/test-index.html
@@ -32,10 +32,10 @@
 </div>
 
 <div class="images">
-<p align="center"><a href="/games/fortnite.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7" style="border: 10px solid #00121f; border-radius: 25px;">
-<a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7" style="border: 10px solid #00121f; border-radius: 25px;">
-<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7" style="border: 10px solid #00121f; border-radius: 25px;">
-<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7" style="border: 10px solid #00121f; border-radius: 25px;">
-<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7" style="border: 10px solid #00121f; border-radius: 25px;">
+<p align="center"><a href="/games/fortnite.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
+<a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
+<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
+<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
+<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
 </p>
 </div>
