--- a/test-index.html
+++ b/test-index.html
@@ -16,8 +16,8 @@
 <title>Homepage</title>
 
 <div class="header">
-  <h1>Header</h1>
-  <p>Subheading</p>
+  <h1 style="font-family: 'Poppins', sans-serif;">Header</h1>
+  <p style="font-family: Arial;">Subheading</p>
 </div>
 
 <body style="background-color: #001b2e;"></body>
