--- a/test-index.html
+++ b/test-index.html
@@ -24,7 +24,7 @@
 
 <div class="border"></div>
 
-<div class="dropdown">
+<div class="dropdown" style="float:right;">
   <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
   <div class="dropdown-content">
     <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
