--- a/test-index.html
+++ b/test-index.html
@@ -17,7 +17,7 @@
 
 <div class="header">
   <h1 style="font-family: 'Poppins', sans-serif;">Spew45.github.io</h1>
-  <p style="font-family: Arial;">The best website for all your unblocked game need with over 50+ games!</p>
+  <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular unblocked games!</p>
 </div>
 
 <body style="background-color: #001b2e;"></body>
