--- a/test-index.html
+++ b/test-index.html
@@ -25,7 +25,7 @@
 <div class="border"></div>
 
 <div class="dropdown" style="float:right;">
-  <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
+  <button class="dropbtn" style="margin-top: -80;"><i class="fa fa-caret-down"></i></button></button>
   <div class="dropdown-content">
     <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
     <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
